@@ -32,6 +32,9 @@ int is_operator(char c){
 }
 
 int is_neg_operator(char *str, int idx){
+	if(idx < 0)
+		return 0;
+	
 	if(idx == 0 && str[idx] == '-')
 		return 1;
 	
@@ -56,10 +59,40 @@ int get_next_operator_idx(char *str, int start){
 void insert_closing_paren_at_idx(char **str, int idx){
 	char *saved = strdup((*str) + idx);
 	
-	(*str) = realloc((*str), strlen((*str)) + strlen(saved) + 2);
+	*str = realloc((*str), strlen((*str)) + strlen(saved) + 2);
 	strcpy((*str) + idx, ")");
 	strcat((*str), saved);
 	free(saved);
+}
+
+int find_next_closing_paren(char *str, int start){
+	size_t len = strlen(str);
+
+	/* If we have '--' in front of an expression, not a single number,
+	 * surrounded by parenthesis, we have to figure out where that
+	 * expression ends in order to place the closing paren in the right place.
+	 */
+	if(strncmp(str + start, "(-(", 3) == 0){
+		int idx = start + strlen("(-(") + 1;
+
+		while(idx < len && str[idx] != ')'){
+			/* We found an operator, so whatever is inside the
+			 * parenthesis is an expression.
+			 */
+			if(is_operator(str[idx])){
+				while(idx < len && str[idx] != ')')
+					idx++;
+
+				return idx;
+			}
+
+			idx++;
+		}
+
+		return -1;
+	}
+	else
+		return -1;
 }
 
 /* Will insert a closing parenthesis if needed and return
@@ -67,17 +100,26 @@ void insert_closing_paren_at_idx(char **str, int idx){
  * return -1.
  */
 int complete_expr(char **str, int idx){
-	int next_op_idx = get_next_operator_idx((*str), idx);
+	/* If there is more than one operand surrounded by parenthesis
+	 * and one of those operands is negative, make sure we don't
+	 * only wrap that operand in parenthesis rather than the
+	 * entire expression in the parenthesis.
+	 */
+	int insert_idx = find_next_closing_paren((*str), idx);
 
-	if(next_op_idx == -1){
+	if(insert_idx == -1)
+		insert_idx = get_next_operator_idx((*str), idx);
+
+	if(insert_idx == -1){
 		*str = realloc((*str), strlen((*str)) + 3);
 		strcat((*str), ")");
+
 		return -1;
 	}
 	
-	insert_closing_paren_at_idx(str, next_op_idx);
+	insert_closing_paren_at_idx(str, insert_idx);
 	
-	return next_op_idx;
+	return insert_idx;
 }
 
 /* Check if there are two operators in a row that
@@ -105,17 +147,23 @@ int invalid_expr(char *str, char cur_op, int idx){
 	return is_operator(prev_op) && (!isnumber(cur_op) && !is_neg_operator(str, idx));
 }
 
-/* Solve an expression. expr must point to a block
- * of memory allocated by malloc.
+/* Parse an expression.
+ * `error` is set on error.
  */
-long parse_expr(char *expr, char **error){
-	if(!expr){
-		asprintf(error, "NULL expression string");
+long parse_expr(char *_expr, char **error){
+	if(!_expr || (_expr && strlen(_expr) == 0)){
+		asprintf(error, "empty expression string");
 		return LONG_MIN;
 	}
 
-	struct stack_t *operators = stack_new();
-	struct stack_t *operands = stack_new();
+	char *expr = strdup(_expr);
+
+	/* Strip whitespace from the beginning and the end of the string. */
+	while(isblank(expr[0]))
+		memmove(expr, expr + 1, strlen(expr));
+
+	while(isblank(expr[strlen(expr) - 1]))
+		expr[strlen(expr) - 1] = '\0';
 
 	size_t exprlen = strlen(expr);
 
@@ -124,8 +172,14 @@ long parse_expr(char *expr, char **error){
 	 */
 	for(int i=1; i<exprlen; i++){
 		if(invalid_expr(expr, expr[i], i)){
+			asprintf(error, "unexpected operator '%c' at index %d\n"
+					"error around here: %c%c%c%c\n"
+					"%*s^", expr[i], i, exprlen > 0 && expr[i-1] != '\0' ? expr[i-1] : ' ', 
+					exprlen > 1 && expr[i] != '\0' ? expr[i] : ' ', 
+					exprlen > 2 && expr[i+1] != '\0' ? expr[i+1] : ' ', 
+					exprlen > 3 && expr[i+2] != '\0' ? expr[i+2] : ' ', 
+					(int)strlen("error around here") + 3, "");
 			free(expr);
-			asprintf(error, "unexpected operator '%c' at index %d", expr[i], i);
 			return LONG_MIN;
 		}
 	}
@@ -151,7 +205,15 @@ long parse_expr(char *expr, char **error){
 		}
 		else if(is_neg_operator(expr, idx)){
 			char *saved = strdup(expr + idx);
+			
 			expr = realloc(expr, strlen(expr) + strlen(saved) + 2);
+			
+			/* Don't add extra parenthesis when we don't need to. */
+			if(idx >= 1 && expr[idx-1] == '('){
+				idx++;
+				continue;
+			}
+			
 			strcpy(expr + idx, "(");
 			strcat(expr, saved);
 
@@ -165,36 +227,45 @@ long parse_expr(char *expr, char **error){
 		
 		idx++;
 	}
-	
+
+	struct stack_t *operators = stack_new();
+	struct stack_t *operands = stack_new();
+
 	/* Process and solve the expression. */
-	while(*expr){
+	idx = 0;
+	size_t limit = strlen(expr);
+	
+	while(idx < limit){
+		char current = expr[idx];
+
 		/* Ignore any whitespace. */
-		while(isblank(*expr))
-			expr++;
+		while(isblank(current)){
+			idx++;
+			continue;
+		}
 
-		if(isxdigit(*expr)){
-			int base = isdigit(*expr) ? 10 : 16;
+		if(isxdigit(current)){
+			int base = isdigit(current) ? 10 : 16;
 
-			/* Strip off any '0x'. */
-			if(strncmp(expr, "0x", strlen("0x")) == 0){
-				expr += strlen("0x");
+			/* Ignore any '0x'. */
+			if(strncmp(expr + idx, "0x", strlen("0x")) == 0){
+				idx += strlen("0x");
+				current = expr[idx];
+
 				base = 16;
 			}
 			
-			char *num_s = strdup(expr);
-			char *start = expr;
+			char *num_s = strdup(expr + idx);
 
 			/* This number could be more than one digit. */
-			while(isdigit(*expr) || isxdigit(*expr)){
-				char c = tolower(*expr);
+			while(isdigit(current) || isxdigit(current)){
+				char c = tolower(current);
 
 				if(c >= 'a' && c <= 'f')
 					base = 16;
 				
-				expr++;
+				current = expr[++idx];
 			}
-
-			num_s[expr - start] = '\0';
 
 			long num = strtol(num_s, NULL, base);
 
@@ -202,11 +273,11 @@ long parse_expr(char *expr, char **error){
 
 			stack_push(operands, (void *)num);
 		}
-		else if(*expr == '('){
+		else if(current == '('){
 			stack_push(operators, (void *)'(');
-			expr++;
+			idx++;
 		}
-		else if(*expr == ')'){
+		else if(current == ')'){
 			while(!stack_empty(operators) && (char)stack_peek(operators) != '('){
 				char operator = (char)stack_pop(operators);
 
@@ -220,10 +291,12 @@ long parse_expr(char *expr, char **error){
 				if(err){
 					asprintf(error, "%s", err);
 
+					free(expr);
 					free(err);
+
 					stack_free(operands);
 					stack_free(operators);
-					
+										
 					return LONG_MIN;
 				}
 
@@ -232,16 +305,13 @@ long parse_expr(char *expr, char **error){
 
 			stack_pop(operators);
 			
-			expr++;
+			idx++;	
 		}
-		else if(is_operator(*expr)){
-			/* Take care of negative numbers. */
-			if(*expr == '-'){
-				if(*(expr - 1) == '(' || is_operator(*(expr - 1)))
-					stack_push(operands, (void *)0);
-			}
+		else if(is_operator(current)){
+			if(is_neg_operator(expr, idx))
+				stack_push(operands, (void *)0);
 
-			char cur_op_precedence = precedence(*expr);
+			char cur_op_precedence = precedence(current);
 
 			while(!stack_empty(operators) && precedence((char)stack_peek(operators)) >= cur_op_precedence){
 				char operator = (char)stack_pop(operators);
@@ -257,6 +327,8 @@ long parse_expr(char *expr, char **error){
 					asprintf(error, "%s", err);
 
 					free(err);
+					free(expr);
+
 					stack_free(operands);
 					stack_free(operators);
 					
@@ -266,12 +338,14 @@ long parse_expr(char *expr, char **error){
 				stack_push(operands, (void *)result);
 			}
 
-			stack_push(operators, (void *)(uintptr_t)(*expr));
+			stack_push(operators, (void *)(uintptr_t)(current));
 
-			expr++;
+			idx++;
 		}
 		else{
-			asprintf(error, "bad character %c at index %d", *expr, idx);
+			asprintf(error, "bad character %c at index %d", current, idx);
+
+			free(expr);
 
 			stack_free(operands);
 			stack_free(operators);
@@ -295,6 +369,8 @@ long parse_expr(char *expr, char **error){
 			asprintf(error, "%s", err);
 
 			free(err);
+			free(expr);
+
 			stack_free(operands);
 			stack_free(operators);
 			
@@ -308,6 +384,8 @@ long parse_expr(char *expr, char **error){
 
 	stack_free(operators);
 	stack_free(operands);
+	
+	free(expr);
 
 	return result;
 }
